# nbody

./: Cargo.toml
src/: geometry.rs  main.rs
src/geometry/: bh_tree.rs  db.rs  vec3d.rs
