[package]
name = "nbody"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "*"
serde = { version = "1.0", features = ["derive"] }
sled = { version = "0.34", features = ["io_uring"] }
vtkio = "*"
log = { version = "*", features = [ "serde", "std" ] }
