[package]
name = "nbody"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "*"
sled = { version = "0.34", features = ["io_uring"] }
log = { version = "*", features = [ "serde", "std", "kv_unstable",  "release_max_level_info"] }
env_logger = "0.9.1"
csv = "1.1.6"
crossbeam-channel = "0.5.6"
rayon = "1.5.3"
rand_distr = "0.4.3"
